main_output.txt
  File "main.py", line 3
    def __init__(self, nombre, ubicacion, habitaciones_disponibles):
    ^
IndentationError: unexpected indent


** Process exited - Return Code: 1 **
Press Enter to exit terminal